add trino security