@@ -1,3 +1,9 @@
+-Xms2G
 -Xmx2G
 -XX:+UseG1GC
--XX:+ExitOnOutOfMemoryError
+-XX:G1HeapRegionSize=32M
+-XX:+UseGCOverheadLimit
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:ReservedCodeCacheSize=512M
+-Djdk.attach.allowAttachSelf=true
